--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,7 @@ inputs:
   base:
     description: "Base branch to compare with (defaults to master)"
   special_files:
-    description: "File filters to check against for diffs
+    description: "File filters to check against for diffs"
 branding:
   color: 'green'
   icon: 'activity'
